[package]
name = "my-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
bytes = "1"
crossterm = "0.27.0"
console = "0.15.7"
local-ip-address = "0.5.6"
tracing = "0.1.40"
tokio-stream = "0.1.14"
async-trait = "0.1.74"
